<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBkColor"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="@string/todo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/whiteCardColor"
                    android:elevation="5dp"
                    app:cardCornerRadius="20dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/log_in"
                            android:textAlignment="center"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="24sp"
                            android:textStyle="bold" />


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:layout_marginBottom="10dp"
                                android:background="@drawable/options_background"
                                android:orientation="vertical">

                                <EditText
                                    android:id="@+id/LogEmailID"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginVertical="5dp"
                                    android:background="@null"
                                    android:backgroundTint="@color/primaryTextColor"
                                    android:gravity="center_vertical"
                                    android:hint="@string/enter_email_address"
                                    android:inputType="textEmailAddress"
                                    android:padding="12dp"
                                    android:autofillHints="emailAddress" />
                            </LinearLayout>

                            <View
                                android:id="@+id/view3"
                                android:layout_width="match_parent"
                                android:layout_height="40dp" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBottom="@+id/view3"
                                android:layout_marginStart="30dp"
                                android:background="@color/white"
                                android:includeFontPadding="false"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:paddingBottom="10dp"
                                android:text="@string/email"
                                android:textColor="@color/primaryTextColor"
                                android:textStyle="bold" />
                        </RelativeLayout>


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:layout_marginBottom="10dp"
                                android:background="@drawable/options_background"
                                android:orientation="vertical">

                                <EditText
                                    android:id="@+id/LogPasswd"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginVertical="5dp"
                                    android:background="@null"
                                    android:backgroundTint="@color/primaryTextColor"
                                    android:gravity="center_vertical"
                                    android:hint="@string/enter_password"
                                    android:inputType="textPassword"
                                    android:padding="10dp"
                                    android:autofillHints="password" />
                            </LinearLayout>

                            <View
                                android:id="@+id/view4"
                                android:layout_width="match_parent"
                                android:layout_height="40dp" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBottom="@+id/view4"
                                android:layout_marginStart="30dp"
                                android:background="@color/white"
                                android:includeFontPadding="false"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:paddingBottom="10dp"
                                android:text="@string/password"
                                android:textColor="@color/primaryTextColor"
                                android:textStyle="bold" />
                        </RelativeLayout>


                        <TextView
                            android:id="@+id/ForgotPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/forgot_password"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="12sp" />


                        <Button
                            android:id="@+id/LoginButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/login_button_bk"
                            android:text="@string/login"
                            android:paddingHorizontal="20dp"
                            android:textColor="@color/whiteTextColor"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/RedirectRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/don_t_have_an_account_sign_up"
                            android:textAlignment="center"
                            android:clickable="true"
                            android:textColor="@color/primaryTextColor"
                            android:textStyle="bold"
                            android:focusable="true" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>


